--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-<h1>Contactez nous</h1>
-<div>
+<h4>Contactez nous</h4>
+<div class="p-3">
 {{form (formulaire)}}
 </div>
 {% endblock %}
