--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-<h1>hello</h1>
+<div class="photo">
+ <img src="{{ asset('images/photo.jpg') }}" alt="foto jeux" class="w-100">
+</div>
+
 {% endblock %}
